# realtime-translator

./: .gitignore  README.md  dev.bat  package.json  pnpm-lock.yaml
docs/: shortcuts.md  ui-optimization-plan.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.bat  build.ps1  build2.bat  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  logger.rs  main.rs  screenshot.rs  shortcuts.rs  tray.rs
src-tauri/src/accessibility/: mod.rs  uia_events.rs  uia_polling.rs  windows.rs
src-tauri/src/asr/: aliyun.rs  engine.rs  mod.rs  whisper.rs
src-tauri/src/audio/: capture.rs  mod.rs
src-tauri/src/clipboard/: mod.rs  watcher.rs
src-tauri/src/commands/: accessibility.rs  audio.rs  clipboard.rs  history.rs  mod.rs  ocr.rs  screenshot.rs  selector.rs  settings.rs  shortcuts.rs  translation.rs  uninstall.rs
src-tauri/src/db/: database.rs
src-tauri/src/ocr/: baidu_ocr.rs  engine.rs  engine_manager.rs  google_vision.rs  mod.rs
src-tauri/src/speech_translation/: aliyun.rs  dashscope.rs  engine.rs  mod.rs
src-tauri/src/translation/: deepl.rs  engine.rs  engine_manager.rs  memory_cache.rs  mod.rs  openai.rs  tencent.rs
src-tauri/src/window/: bubble.rs
src/components/bubble/: BubbleActions.tsx  EngineSwitcher.tsx  FloatingBubble.tsx  GlassCard.tsx  SurfaceCard.tsx  TranslationResult.tsx  bubble.css
src/components/region-selector/: RegionSelector.tsx  region-selector.css
src/components/settings/: AsrConfig.tsx  EngineConfig.tsx  GeneralSettings.tsx  LanguageSettings.tsx  Settings.tsx  ShortcutConfig.tsx  settings.css
src/hooks/: useLiveTranslation.ts  useRegionSelector.ts  useTranslationPipeline.ts  useUiaEventListener.ts
src/lib/: errorMessages.test.ts  errorMessages.ts  tauri-bridge.ts  translation-service.ts  withTimeout.ts
src/stores/: settingsStore.ts  translationStore.ts  uiStore.ts
src/styles/: global.css  tokens.css
src/types/: ocr.ts
(+5 files in other folders)
