[package]
name = "realtime-translator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "realtime_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
dirs = "6"
lru = "0.12"
log = { version = "0.4", features = ["release_max_level_info"] }
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-global-shortcut = "2.3.1"
xcap = "0.9.4"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_UI_Accessibility",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Media_Audio",
  "Win32_Media_KernelStreaming",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_System_Ole",
] }
uiautomation = { version = "0.24", features = ["event"] }

[dev-dependencies]
serial_test = "3"

